--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -3,6 +3,10 @@ footer#main-footer{
   padding: 20px 0 15px;
   background-color: $gray-6;
   color: #fff;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
 
   ul{
     margin: 0;
