--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -18,7 +18,7 @@ footer#main-footer{
     float: left;
     li{
       float: left;
-      margin-left: 15px;
+      margin-right: 15px;
 
       a{
         color: $gray-2;
