--- a/css/style.css
+++ b/css/style.css
@@ -515,7 +515,7 @@ footer#main-footer {
     float: left; }
     footer#main-footer .footer-menu li {
       float: left;
-      margin-left: 15px; }
+      margin-right: 15px; }
       footer#main-footer .footer-menu li a {
         color: #b9b9b9;
         -webkit-transition: all 0.3s ease-in-out;
