--- a/css/_responsive.scss
+++ b/css/_responsive.scss
@@ -40,6 +40,33 @@
   }
 }
 
+@media (min-width: 768px) and (max-width: 991px) {
+  .navbar.fixed{
+    form{
+      $input_height: auto;
+      $input_font_size: 13px;
+      .col-sm-5,
+      .col-sm-6,
+      .col-sm-7{
+        position: relative;
+        .check-button{
+          font-size: 0;
+        }
+      }
+    }
+
+    form > .row{
+      margin-left: -1px;
+      margin-right: -1px;
+
+      .col-sm-7,
+      .col-sm-5,
+      .col-sm-2{
+        padding: 1px;
+      }
+    }
+  }
+}
 @media (max-width: 767px) {
   header{
     #top-nav-menu{
@@ -85,22 +112,54 @@
       .icon-bar{
         background-color: $gray-1;
       }
-
+      .logo{
+        margin-left: 15px;
+      }
        .navbar-nav{
          float: none;
        }
-
-       a{
-         color: $gray-2;
-         text-transform: uppercase;
-         font-weight: 700;
-       }
      }
+    .navbar.fixed{
+
+      .navbar-header{
+        float: none;
+      }
+      .navs{
+        float: none;
+        width: 100%;
+        a{
+          padding-top: 5px !important;
+          padding-bottom: 5px !important;
+        }
+      }
+    }
   }
   .search_bar{
     form{
       .form_input{
         flex-direction: column;
+      }
+    }
+  }
+  .navbar.fixed{
+    form{
+      $input_height: auto;
+      $input_font_size: 13px;
+
+      .submit_button{
+        border-radius: 0;
+      }
+    }
+
+    form > .row{
+      margin-left: -15px;
+      margin-right: -15px;
+
+      .col-sm-7,
+      .col-sm-5,
+      .col-sm-2{
+        padding-left: inherit;
+        padding-right: inherit;
       }
     }
   }
@@ -243,4 +302,7 @@
       }
     }
   }
+}
+@media (max-width: 480px){
+
 }
