--- a/css/_responsive.scss
+++ b/css/_responsive.scss
@@ -160,7 +160,7 @@
         input[type = text]{
           border: none;
           flex-grow: inherit;
-          padding: 5px 10px;
+          padding: 10px;
           width: 100%;
         }
         label{
@@ -170,6 +170,7 @@
           align-items: center;
           justify-content: center;
           cursor: pointer;
+          padding: 8px;
 
           input{
             margin: 0;
@@ -179,6 +180,7 @@
 
       .submit_button{
         border-radius: 0;
+        padding: 8px;
       }
     }
 
