--- a/css/style.css
+++ b/css/style.css
@@ -594,6 +594,54 @@ footer#main-footer {
   #page-category .publicite {
     width: 100%; }
 
+#page-evenements .event_list .article {
+  position: relative;
+  width: 90%;
+  margin-left: 10%; }
+  #page-evenements .event_list .article .article_picture_frame {
+    height: 225px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+  #page-evenements .event_list .article .event_date {
+    background-color: #4d4d4d;
+    color: #f8f8f8;
+    padding: 2px 10px;
+    display: inline-block;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 700;
+    position: absolute;
+    top: 15px;
+    left: -17px;
+    z-index: 2; }
+    #page-evenements .event_list .article .event_date .date {
+      float: left;
+      margin: 0 5px; }
+    #page-evenements .event_list .article .event_date .day {
+      display: block;
+      border-bottom: solid 2px #f8f8f8;
+      font-size: 16px; }
+    #page-evenements .event_list .article .event_date .month {
+      font-size: 10px; }
+  #page-evenements .event_list .article .event_date:before {
+    content: '';
+    display: inline-block;
+    width: 13px;
+    height: 13px;
+    border: solid 13px transparent;
+    border-left: solid 13px #b9b9b9;
+    position: absolute;
+    left: 5px;
+    bottom: -13px;
+    z-index: 1;
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotate(-45deg); }
+
 @media (max-width: 1365px) {
   #google-map .etablissements {
     overflow: hidden;
