--- a/css/style.css
+++ b/css/style.css
@@ -270,7 +270,6 @@ end of categories carousel
   background-size: cover;
   background-position: center center; }
   .page-banner .container {
-    height: 200px;
     display: flex;
     align-items: center;
     justify-content: flex-start; }
@@ -623,8 +622,7 @@ footer#main-footer {
   border-bottom: solid 2px #b9b9b9; }
 #page-evenements .event_list .article {
   position: relative;
-  width: 90%;
-  margin-left: 10%;
+  padding-left: 17px;
   padding-bottom: 30px; }
   #page-evenements .event_list .article .article_picture_frame {
     height: 225px;
@@ -643,7 +641,7 @@ footer#main-footer {
     font-weight: 700;
     position: absolute;
     top: 15px;
-    left: -17px;
+    left: 0;
     z-index: 2; }
     #page-evenements .event_list .article .event_date .date {
       float: left;
@@ -659,6 +657,58 @@ footer#main-footer {
     font-weight: 700;
     font-size: 13px; }
   #page-evenements .event_list .article .event_date:before {
+    content: '';
+    display: inline-block;
+    width: 13px;
+    height: 13px;
+    border: solid 13px transparent;
+    border-left: solid 13px #b9b9b9;
+    position: absolute;
+    left: 5px;
+    bottom: -13px;
+    z-index: 1;
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotate(-45deg); }
+
+.page-banner .section-slider .article {
+  position: relative;
+  padding: 10px 0 10px 17px; }
+  .page-banner .section-slider .article .article_picture_frame {
+    height: 320px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 5px; }
+  .page-banner .section-slider .article .event_date {
+    background-color: #4d4d4d;
+    color: #f8f8f8;
+    padding: 2px 10px;
+    display: inline-block;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 700;
+    position: absolute;
+    top: 30px;
+    left: 0;
+    z-index: 2; }
+    .page-banner .section-slider .article .event_date .date {
+      float: left;
+      margin: 0 5px; }
+    .page-banner .section-slider .article .event_date .day {
+      display: block;
+      border-bottom: solid 2px #f8f8f8;
+      font-size: 16px; }
+    .page-banner .section-slider .article .event_date .month {
+      font-size: 10px; }
+  .page-banner .section-slider .article .article_title {
+    color: #333333;
+    font-weight: 700;
+    font-size: 13px; }
+  .page-banner .section-slider .article .event_date:before {
     content: '';
     display: inline-block;
     width: 13px;
