Updates du header

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,6 +1,7 @@
 header{
+  background-color: $gray-2;
+
   #top-nav-menu{
-    background-color: $gray-2;
     overflow: hidden;
     font-size: 13px;
     color: $gray-4;
@@ -47,7 +48,7 @@ header{
     }
   }
   #top-nav-menu.fixed{
-    margin-bottom: 72px;
+    padding-bottom: 82px;
   }
   .navbar{
     margin: 0;
