--- a/css/_maps.scss
+++ b/css/_maps.scss
@@ -116,3 +116,15 @@
     }
   }
 }
+
+.autour_de_moi{
+  .section-title{
+    font-weight: 700;
+  }
+  #google-map{
+    height: 350px;
+    #map{
+      height: 350px;
+    }
+  }
+}
