--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,12 @@ html {
 *:after {
   box-sizing: inherit; }
 
+select {
+  width: 100%;
+  border: solid 2px #b9b9b9;
+  padding: 5px 10px;
+  height: 40px; }
+
 body {
   position: relative;
   margin: 0;
